adding new seasons routes and some tidy up
