# api/db/db_handler/queries.go
@@ -45,3 +45,43 @@ func DeleteCompetition(
 ) error {
 	return q.DeleteCompetition(ctx, params)
 }
+
+func CreateSeason(
+	ctx context.Context,
+	q Queries,
+	params db.CreateSeasonParams,
+) error {
+	return q.CreateSeason(ctx, params)
+}
+
+func GetSeason(
+	ctx context.Context,
+	q Queries,
+	id uuid.UUID,
+) (db.Season, error) {
+	return q.GetSeason(ctx, id)
+}
+
+func GetSeasons(
+	ctx context.Context,
+	q Queries,
+	competitionID uuid.UUID,
+) ([]db.Season, error) {
+	return q.GetSeasons(ctx, competitionID)
+}
+
+func UpdateSeason(
+	ctx context.Context,
+	q Queries,
+	params db.UpdateSeasonParams,
+) error {
+	return q.UpdateSeason(ctx, params)
+}
+
+func DeleteSeason(
+	ctx context.Context,
+	q Queries,
+	params db.DeleteSeasonParams,
+) error {
+	return q.DeleteSeason(ctx, params)
+}
